--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -18,6 +18,7 @@
 		align-items: center;
 		justify-content: center;
 		padding: calc(var(--spacingVerticalXXXL) * 2) var(--spacingHorizontalL);
+		padding-top: calc(80px + var(--spacingVerticalXXXL) * 2);
 		background: var(--colorBrandBackground);
 	}
 
