Comment out minified files and go back to using fluentui tokens
Run: npm install @fluentui/tokens

--- a/src/pages/demo.astro
+++ b/src/pages/demo.astro
@@ -16,7 +16,8 @@ import Footer from "../components/Footer.astro";
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Consultologist - AI-Powered Business Consulting Solutions</title>
-		<link rel="stylesheet" href="/styles/fluent-tokens.css" />
+		<script src="../fluentui-setup.ts"></script>
+		<!-- <link rel="stylesheet" href="/styles/fluent-tokens.css" />
 		<script is:inline src="/vendor/fluent-web-components.min.js"></script>
 		<script is:inline>
 			provideFluentDesignSystem().register(
@@ -30,7 +31,7 @@ import Footer from "../components/Footer.astro";
 				fluentDivider(),
 				fluentToolbar()
 			);
-		</script>
+		</script> -->
 	</head>
 	<body>
 		<Header />
