--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,8 @@ import Pricing from "../components/Pricing.astro";
 		<title>
 			Consultologist - You handle your specialty, we handle ours.
 		</title>
-		<link rel="stylesheet" href="/styles/fluent-tokens.css" />
+		<script src="../fluentui-setup.ts"></script>
+		<!-- <link rel="stylesheet" href="/styles/fluent-tokens.css" />
 		<script is:inline src="/vendor/fluent-web-components.min.js"></script>
 		<script is:inline>
 			provideFluentDesignSystem().register(
@@ -35,7 +36,7 @@ import Pricing from "../components/Pricing.astro";
 				fluentDivider(),
 				fluentToolbar()
 			);
-		</script>
+		</script> -->
 	</head>
 	<body>
 		<Header />
